# nutrition-agent

./: README.md  pyproject.toml
nutrition_assistant_backend/: agent.py  cli.py  constants.py  main.py  prompts.py  pyproject.toml
nutrition_assistant_backend/clients/: llm_service_interface.py  ollama_client.py  ollama_service.py  openai_client.py  openai_service.py
nutrition_assistant_backend/tools/: beautiful_soup_tools.py  tavily_tools.py
nutrition_assistant_frontend/: index.html  package-lock.json  package.json
nutrition_assistant_frontend/src/: App.css  App.module.css  App.tsx  index.css  types.ts
nutrition_assistant_frontend/src/api/: chat.ts
nutrition_assistant_frontend/src/components/Header/: Header.module.css  Header.tsx
nutrition_assistant_frontend/src/components/InputForm/: InputForm.module.css  InputForm.tsx
nutrition_assistant_frontend/src/components/Message/: Message.module.css  Message.tsx
nutrition_assistant_frontend/src/components/MessageList/: MessageList.module.css  MessageList.tsx
nutrition_assistant_frontend/src/components/WelcomeMessage/: WelcomeMessage.module.css  WelcomeMessage.tsx
